--- a/realm-encryption-helper/build.gradle
+++ b/realm-encryption-helper/build.gradle
@@ -1,9 +1,35 @@
 apply plugin: 'com.android.library'
 
+// Add these line below apply plugin "com.android.library"
+ext {
+    bintrayRepo = 'maven'
+    bintrayName = 'realm-encryption-helper'   // Has to be same as your library module name
+
+    publishedGroupId = 'com.github.tntkhang'
+    libraryName = 'realm-encryption-helper'
+    artifact = 'realm-encryption-helper'     // Has to be same as your library module name
+
+    libraryDescription = 'Android Library to make easy to config and using SharePreferences'
+
+    // Your github repo link
+    siteUrl = 'https://github.com/tntkhang/realm-encryption-helper'
+    gitUrl = 'https://github.com/tntkhang/realm-encryption-helper.git'
+    githubRepository= 'tntkhang/realm-encryption-helper'
+
+    libraryVersion = '1.0.0'
+
+    developerId = 'tntkhang'
+    developerName = 'KhangTran'
+    developerEmail = 'tntkhang@gmail.com'
+
+    licenseName = 'The MIT License'
+    licenseUrl = 'https://opensource.org/licenses/MIT'
+    allLicenses = ["MIT"]
+}
+
+
 android {
     compileSdkVersion 26
-
-
 
     defaultConfig {
         minSdkVersion 15
@@ -34,3 +60,6 @@ dependencies {
 
     implementation 'com.github.tntkhang:preferences-helper:1.0.0'
 }
+// Place it at the end of the file
+apply from: 'https://raw.githubusercontent.com/nisrulz/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nisrulz/JCenter/master/bintrayv1.gradle'
